# vapaa

./: .gitignore  CMakeLists.txt  GCOV_COVERAGE_REPORT.md  LICENSE  MPI5_ABI_CONSTANTS_REPORT.md  MPI5_ABI_PERF_REPORT.md  MPI5_ABI_UPDATE_REPORT.md  MPI_MODULE_DESIGN.md  Makefile  README.md  TEST_COVERAGE_EXPANSION_PROMPT.md  foo_cfi.c  make.inc.cray  make.inc.gcc  make.inc.intel  make.inc.llvm  make.inc.muk  make.inc.nag  make.inc.nvhpc  mpi_coll.c  mpi_coll_c.F90  mpi_coll_f.F90  mpi_comm.c  mpi_comm_f.F90  mpi_core.c  mpi_core_c.F90  mpi_core_f.F90  mpi_datatype.c  mpi_datatype_c.F90  mpi_datatype_f.F90  mpi_f08.F90  mpi_file.c  mpi_file_c.F90  mpi_global_constants.F90  mpi_group.c  mpi_handle_types.F90  mpi_info.c  mpi_message.c  mpi_message_c.F90  mpi_message_f.F90  (+23 more)
docs/: vapaa-full-sweep-20260620T233546Z-REPORT.md  vapaa-full-sweep-20260620T233546Z-summary.tsv  (+1 more)
perf/: CMakeLists.txt  README.md  run_mpich_abi_compare.sh  vapaa_perf_f08.F90
sandbox/: Makefile  (+8 more)
tests/: CMakeLists.txt  Makefile  mpich_uallreducef08.F90  runall.sh  test_attr.F90  test_bcast.F90  test_c_direct_coverage.c  test_callback_error_coverage.F90  test_cfi.F90  test_cfi_matrix_collectives.F90  test_cfi_matrix_io.F90  test_cfi_matrix_p2p.F90  test_cfi_matrix_rma.F90  test_cfi_util_direct.c  test_collectives.F90  test_comm.F90  test_core.F90  test_datatype.F90  test_datatype_more_coverage.F90  test_direct_collective_coverage.F90  test_direct_comm_coverage.F90  test_error.F90  test_error_api_coverage.F90  test_f08_missing_ierror_fatal.F90  test_f77_direct_coverage.c  test_file.F90  test_file_error.F90  test_group_range.F90  test_handles.F90  test_info.F90  test_matrix_noncontig.F90  test_matrix_noncontig_2.F90  test_matrix_noncontig_3.F90  test_mpifh_comm_io_rma.f  test_mpifh_coverage.f  test_op_trampoline_slots.F90  test_p2p.F90  test_pgif_descriptor.F90  test_pgif_descriptor.c  test_pgif_mpi_byte_noncontig.F90  (+24 more)
tests/mpich/: Makefile
tests/mpich-based/: test_matrix_noncontig_2.F90
tests/mpich/attr/: attrlangf08.f90  attrmpi1f08.f90  baseattr2f08.f90  baseattr3f08.f90  baseattrf08.f90  commattr2f08.f90  commattr3f08.f90  commattrf08.f90  fandcattrf08.f90  typeattr2f08.f90  typeattr3f08.f90  typeattrf08.f90
tests/mpich/coll/: allredint8f08.f90  allredopttf08.f90  alltoallvf08.f90  alltoallwf08.f90  exscanf08.f90  inplacef08.f90  nonblocking_inpf08.f90  nonblockingf08.f90  red_scat_blockf08.f90  redscatf08.f90  reducelocalf08.f90  split_typef08.f90  uallreducef08.f90  vw_inplacef08.f90
tests/mpich/comm/: commerrf08.f90  commnamef08.f90
tests/mpich/datatype/: allctypesf08.f90  createf08.f90  gaddressf08.f90  get_elem_u.f90  hindex1f08.f90  hindexed_blockf08.f90  indtype.f90  kinds.f90  packef08.f90  sizeof.f90  structf.f90  trf08.f90  typecntsf08.f90  typem2f08.f90  typename3f08.f90  typenamef08.f90  typesnamef08.f90  typesubf08.f90
tests/mpich/ext/: allocmemf90.f90  c2f2cf90.f90  c2f90mult.c  ctypesinf90.f90
tests/mpich/info/: infogetstrf90.f90  infotest2f90.f90  infotestf90.f90
tests/mpich/io/: atomicityf90.f90  c2f2ciof90.f90  c2f90multio.c  fileerrf90.f90  fileinfof90.f90  i_fcoll_test.f90  ioharness.tlt  miscfilef90.f90  setviewcurf90.f90  shpositionf90.f90
tests/mpich/misc/: Makefile  sizeof2.f90
tests/mpich/profile/: profile1f90.f90
tests/mpich/pt2pt/: greqf08.f90  irsendf08.f90  isendf08.f90  issendf08.f90  mprobef08.f90  prsendf08.f90  psendf08.f90  pssendf08.f90  pt2pt_largef08.f90  rsendf08.f90  sendf08.f90  sendrecvf08.f90  sendrecvreplf08.f90  ssendf08.f90  statusesf08.f90
tests/mpich/rma/: aintf08.f90  baseattrwinf08.f90  c2f2cwinf08.f90  winaccf08.f90  winattr2f08.f90  winattrf08.f90  winerrf08.f90  winfencef08.f90  wingetf08.f90  wingroupf08.f90  winnamef08.f90  winscale1f08.f90  winscale2f08.f90
tests/mpich/spawn/: connaccf90.f90  namepubf90.f90  spawnargvf03.f90  spawnargvf90.f90  spawnf90.f90  spawnmult2f90.f90  spawnmultf03.f90  spawnmultf90.f90
tests/mpich/subarray/: test1.f90  test10.f90  test11.f90  test12.f90  test13.f90  test14.f90  test15.f90  test2.f90  test3.f90  test4.f90  test5.f90  test6.f90  test7.f90  test8.f90  test9.f90
tests/mpich/timer/: wtimef90.f90
tests/mpich/topo/: cart_subf90.f90  cartcrf90.f90  dgraph_unwgtf90.f90  dgraph_wgtf90.f90
tests/mpich_main/: CMakeLists.txt
tests/mpich_main/f08/attr/: attrlangc.c  baseattrf08.f90
tests/mpich_main/f08/coll/: alltoallvf08.f90  alltoallwf08.f90  nonblocking_inpf08.f90  nonblockingf08.f90
tests/mpich_main/f08/ext/: c2f2cf90.f90  c2f902c.c  ctypesfromc.c
tests/mpich_main/f08/io/: c2f2ciof90.f90  c2f902cio.c  iwriteatallf90.f90  iwriteatf90.f90  iwritef90.f90  iwriteshf90.f90  setviewcurf90.f90  writeallbef90.f90  writeallf90.f90  writeatallbef90.f90  writeatallf90.f90  writeatf90.f90  writef90.f90  writeordbef90.f90  writeordf90.f90  writeshf90.f90
tests/mpich_main/f08/rma/: c2f2cwinf08.f90
tests/mpich_main/f08/topo/: dgraph_unwgtf90.f90
tests/mpich_main/f77/: CMakeLists.txt
tests/mpich_main/f77/attr/: attraints.h
tests/mpich_main/f77/coll/: inplacef.f  nonblocking_inpf.f  nonblockingf.f  red_scat_blockf.f
tests/mpich_main/f77/datatype/: packef.f  packef_c.f  packef_i.f  packef_r8.f  typeaints.h
tests/mpich_main/f77/ext/: add1size.h  c2f2c.c
tests/mpich_main/f77/io/: ioaint.h  iodisp.h  iooffset.h
tests/mpich_main/f77/pt2pt/: bottom_pt2pt.f  bsendf.f  rsendf.f
tests/mpich_main/f77/spawn/: type1aint.h
tests/mpich_main/f90/: CMakeLists.txt
tests/mpich_main/f90/attr/: attrlangc.c  attrlangf90.f90  baseattr3f90.f90  fandcattrf90.f90
tests/mpich_main/f90/datatype/: get_elem_u.f90  indtype.f90  kinds.f90  sizeof.f90  structf.f90
tests/mpich_main/f90/misc/: alloc_mem.f90  sizeof2.f90
tests/mpich_main/f90/spawn/: spawnargvf03.f90  spawnmultf03.f90
tests/mpich_main/f90/timer/: wtimef90.f90
tests/mpich_main/include/: mpitestconf.h  mtest_mpix.h  vapaa_test_handle_compat.h
tests/mpich_main/maint/: common.defn  testmerge.in
tests/mpich_main/util/: mtest_f90.f90
tests/other_tests/: README.md  test_cfi.F90
tests/user-def-reduce_test/: test_user_reduction.F90
(+142 files in other folders)
